feat [springboot]: add category entity & implement it`s functionality